--- a/WeCloudData-Projects/AvocadoPrice/Readme
+++ b/WeCloudData-Projects/AvocadoPrice/Readme
@@ -1,1 +1,7 @@
-
+Avocado has become one of the world's trendiest foods.
+As the poster child of millennial healthy eating, this superfood is now a mainstay for foodies everywhere. 
+But have you noticed your avo on toast is costing more and more? 
+Avocado prices have rocketed in recent years by up to 129%, with the average national price of a single Hass avocado reaching $2.10 in 2019,
+almost doubling in just one year.
+The average American eats 7 pounds of guacamole a year, up from 1.1 pounds in 1989, according to Agriculture Marketing Resource Center,
+a research group that receives grants from the USDA. By Patrick Gillespie  CNNMoney, Sep 11 2017.
