--- a/BrainStation-project/english-premier-league-players/Readme
+++ b/BrainStation-project/english-premier-league-players/Readme
@@ -1,1 +1,7 @@
+Kaggle Dataset,    March 29, 2020
 
+English Premier League Players Dataset, Season 2017/18 A unique dataset containing FPL data, popularity and market values
+
+Overview The specific objective of this project was to investigate the Market Values variation of different players and what things they depend on/what are the factors affecting them.Our goal was to compare market value of the players. Contested by twenty clubs, it operates on a system of promotion and relegation with the English Football League (EFL).
+
+Context For most football fans, May - July represents a lull period due to the lack of club football. What makes up for it, is the intense transfer speculation that surrounds all major player transfers today. Their market valuations also lead to a few raised eyebrows, lately more than ever.The questions is how good a proxy popularity could be for ability, and the predictive power it would have in a model estimating a player's market value.
